# Anikki

./: .env.example  .gitignore  .gitmodules  .metadata  LICENSE  README.md  analysis_options.yaml  distribute_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  cron.yml  linux.yml  macos.yml  windows.yml
android/app/: build.gradle
integration_test/: library_test.dart  news_test.dart
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: anikki.dart  bloc_listeners.dart  bloc_observer.dart  bloc_provider.dart  main.dart
lib/anilist_auth/: anilist_auth.dart
lib/bindings/anitomy/: CMakeLists.txt  README.md  anitomy.cpp  anitomy.dart  anitomy.def  anitomy.h  helpers.cpp  helpers.h
lib/components/: anikki_glass_icon.dart  animeCard.dart  box_skeleton.dart  custom_grid_view.dart  custom_list_view.dart  entry_tag.dart  entry_tile.dart  expandable_fab.dart  fade_overlay.dart  frosted_circle.dart  glass_circle.dart  list_view_divider.dart  settings_button.dart
lib/config/: config.dart
lib/core/: bloc_listeners.dart  bloc_observer.dart  bloc_provider.dart  core.dart
lib/data/: data.dart  files.dart
lib/domain/: anime_information_repository.dart  consumet_repository.dart  domain.dart  feed_repository.dart  local_storage_repository.dart  (+6 more)
linux/: CMakeLists.txt  anitomy  my_application.cc
macos/: Podfile
scripts/: build_bindings_macos.sh  package-lock.json  package.json
test/: anilist_test.dart  anitomy_test.dart  nyaa_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  anitomy
(+1179 files in other folders)
